[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/utils.gd" type="Script" id=1]
[ext_resource path="res://alternative_sprites/pieces/back_3.png" type="Texture" id=2]
[ext_resource path="res://alternative_sprites/top_UI_ps.png" type="Texture" id=3]
[ext_resource path="res://alternative_sprites/bottom_UI_ps.png" type="Texture" id=4]
[ext_resource path="res://scripts/grid.gd" type="Script" id=5]
[ext_resource path="res://scripts/ice_holder.gd" type="Script" id=6]
[ext_resource path="res://scripts/lock_holder.gd" type="Script" id=7]
[ext_resource path="res://music/what is love 8 bit.ogg" type="AudioStream" id=8]
[ext_resource path="res://music/tone-beep.ogg" type="AudioStream" id=9]
[ext_resource path="res://music/delisioso.ogg" type="AudioStream" id=10]

[node name="game_window" type="Node2D"]
script = ExtResource( 1 )

[node name="backgorund" type="TextureRect" parent="."]
margin_top = -1.0
margin_right = 40.0
margin_bottom = 39.0
texture = ExtResource( 2 )

[node name="top_ui" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="bottom_ui" type="TextureRect" parent="."]
margin_top = 928.0
margin_right = 576.0
margin_bottom = 1020.0
texture = ExtResource( 4 )

[node name="grid" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ice_holder" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="lock_holder" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="destroy_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="collapse_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="refill_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ready_timer" type="Timer" parent="."]
one_shot = true

[node name="main_theme_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -5.0

[node name="destroy_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="combo_audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[connection signal="damage_ice" from="grid" to="ice_holder" method="_on_grid_damage_ice"]
[connection signal="damage_lock" from="grid" to="lock_holder" method="_on_grid_damage_lock"]
[connection signal="make_ice" from="grid" to="ice_holder" method="_on_grid_make_ice"]
[connection signal="make_lock" from="grid" to="lock_holder" method="_on_grid_make_lock"]
[connection signal="remove_lock" from="lock_holder" to="grid" method="_on_lock_holder_remove_lock"]
[connection signal="timeout" from="destroy_timer" to="grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="collapse_timer" to="grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="refill_timer" to="grid" method="_on_refill_timer_timeout"]
[connection signal="timeout" from="ready_timer" to="grid" method="_on_ready_timer_timeout"]
